--- a/package.json
+++ b/package.json
@@ -21,20 +21,15 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "start": "rollup -c -w",
     "test": "jest"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/teamleadercrm/sdk-js.git"
   },
-  "keywords": [
-    "api",
-    "teamleader"
-  ],
+  "keywords": ["api", "teamleader"],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/teamleadercrm/sdk-js/issues"
