:wrench: Adds lint and lint:fix commands

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "scripts": {
     "build": "rollup -c",
     "start": "rollup -c -w",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint --config ./.eslintrc --ignore-path ./.eslintignore src",
+    "lint:fix": "npm run lint -- --fix"
   },
   "files": [
     "dist"
