--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
         "ignoreReadBeforeAssign": false
       }
     ],
-    "curly": ["error", "all"]
+    "curly": ["error", "all"],
+    "camelcase": 0
   }
 }
