--- a/package.json
+++ b/package.json
@@ -51,8 +51,5 @@
   "bugs": {
     "url": "https://github.com/teamleadercrm/sdk-js/issues"
   },
-  "homepage": "https://github.com/teamleadercrm/sdk-js#readme",
-  "dependencies": {
-    "ramda": "^0.25.0"
-  }
+  "homepage": "https://github.com/teamleadercrm/sdk-js#readme"
 }
