--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "test:watch": "jest --watch",
     "lint": "eslint --config ./.eslintrc --ignore-path ./.eslintignore src",
     "lint:fix": "npm run lint -- --fix",
+    "prepublishOnly": "npm run build",
     "precommit": "pretty-quick --staged"
   },
   "files": [
