--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "homepage": "https://github.com/teamleadercrm/sdk-js#readme",
   "dependencies": {
-    "humps": "^2.0.1"
+    "humps": "^2.0.1",
+    "snakecase-keys": "^1.2.0"
   }
 }
