Remove snakecase-keys dependency

--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
   },
   "homepage": "https://github.com/teamleadercrm/sdk-js#readme",
   "dependencies": {
-    "humps": "^2.0.1",
-    "snakecase-keys": "^1.2.0"
+    "humps": "^2.0.1"
   }
 }
