Upgrade to Babel 7

--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,29 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/preset-env",
       {
         "modules": false,
         "targets": {
-          "browsers": ["last 2 versions", "ie >= 11"]
+          "browsers": [
+            "last 2 versions",
+            "ie >= 11"
+          ]
         }
       }
     ]
   ],
   "env": {
     "test": {
-      "presets": [["env"]]
+      "presets": [
+        [
+          "@babel/preset-env"
+        ]
+      ]
     }
   },
-  "plugins": ["transform-object-rest-spread", "transform-runtime"]
+  "plugins": [
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-transform-runtime"
+  ]
 }
