--- a/.babelrc
+++ b/.babelrc
@@ -5,25 +5,15 @@
       {
         "modules": false,
         "targets": {
-          "browsers": [
-            "last 2 versions",
-            "ie >= 11"
-          ]
+          "browsers": [">0.25%", "not op_mini all"]
         }
       }
     ]
   ],
   "env": {
     "test": {
-      "presets": [
-        [
-          "@babel/preset-env"
-        ]
-      ]
+      "presets": [["@babel/preset-env"]]
     }
   },
-  "plugins": [
-    "@babel/plugin-proposal-object-rest-spread",
-    "@babel/plugin-transform-runtime"
-  ]
+  "plugins": ["@babel/plugin-proposal-object-rest-spread", "@babel/plugin-transform-runtime"]
 }
