--- a/package.json
+++ b/package.json
@@ -9,20 +9,19 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
-    "eslint": "^4.17.0",
+    "eslint": "^5.12.1",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "husky": "^0.14.3",
     "jest": "^23.6.0",
-    "prettier": "^1.10.2",
+    "prettier": "^1.16.1",
     "pretty-quick": "^1.6.0",
     "rollup": "^0.50.1",
     "rollup-plugin-babel": "^4.0.1",
@@ -40,6 +39,7 @@
     "test:watch": "jest --watch",
     "lint": "eslint --config ./.eslintrc --ignore-path ./.eslintignore src",
     "lint:fix": "npm run lint -- --fix",
+    "format": "prettier --write src/**/*.{js,css,json,md}",
     "prepublishOnly": "npm run build",
     "precommit": "pretty-quick --staged"
   },
