--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "browser": "dist/api.min.umd.js",
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/cli": "^7.4.4",
     "@babel/preset-env": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
