--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "humps": "^2.0.1"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build:es": "NODE_ENV=es babel src --out-dir dist/es",
+    "build:cjs": "NODE_ENV=cjs babel src --out-dir dist/cjs",
+    "build:umd": "rollup -c",
+    "build": "npm run build:umd && npm run build:cjs && npm run build:es",
     "start": "rollup -c -w",
     "test": "jest",
     "test:watch": "jest --watch",
