--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "rollup-plugin-uglify": "^6.0.1"
   },
   "dependencies": {
-    "humps": "^2.0.1"
+    "humps": "^2.0.1",
+    "lodash.merge": "^4.6.1"
   },
   "scripts": {
     "build:es": "NODE_ENV=es babel src --out-dir dist/es",
