--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
   },
   "dependencies": {
     "humps": "^2.0.1",
-    "lodash": "^4.17.11",
-    "lodash.merge": "^4.6.1"
+    "lodash": "^4.17.11"
   },
   "scripts": {
     "build:es": "NODE_ENV=es babel src --out-dir dist/es",
