:wrench: should target current node version for jest

--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,16 @@
   ],
   "env": {
     "test": {
-      "presets": ["@babel/preset-env"]
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "targets": {
+              "node": "current"
+            }
+          }
+        ]
+      ]
     },
     "es": {
       "presets": [
