--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/core": "^7.7.4",
     "@babel/cli": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
+    "@babel/preset-typescript": "^7.18.6",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.0.0",
     "eslint": "^7.2.0",
@@ -30,7 +31,9 @@
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-uglify": "^6.0.2"
+    "rollup-plugin-uglify": "^6.0.2",
+    "rollup-plugin-typescript2": "^0.32.1",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "humps": "^2.0.1",
