--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "test:watch": "jest --watch",
     "lint": "eslint --config ./.eslintrc --ignore-path ./.eslintignore src",
     "lint:fix": "yarn lint -- --fix",
-    "format": "prettier --write src/**/*.js",
+    "format": "prettier --write src/**/*.ts",
     "prepublishOnly": "yarn build"
   },
   "files": [
