--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "module": "dist/es/main.js",
   "browser": "dist/api.min.umd.js",
   "devDependencies": {
-    "@babel/core": "^7.18.10",
     "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-typescript": "^7.18.6",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
     "babel-jest": "^28.1.3",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.1.0",
@@ -30,8 +32,8 @@
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-uglify": "^6.0.2",
     "rollup-plugin-typescript2": "^0.32.1",
+    "rollup-plugin-uglify": "^6.0.2",
     "typescript": "^4.7.4"
   },
   "dependencies": {
