--- a/.eslintrc
+++ b/.eslintrc
@@ -15,5 +15,24 @@
     ],
     "curly": ["error", "all"],
     "camelcase": 0
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.ts"],
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "project": "./tsconfig.json"
+      },
+      "rules": {
+        "no-undef": "off",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+        "no-use-before-define": "off",
+        "@typescript-eslint/no-use-before-define": ["error"],
+        "no-redeclare": "off",
+        "@typescript-eslint/no-redeclare": ["error"]
+      },
+      "plugins": ["@typescript-eslint"]
+    }
+  ]
 }
