🔧 update babel for typescript

--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,11 @@
       {
         "modules": false
       }
-    ]
+    ],
+    "@babel/preset-typescript"
+  ],
+  "plugins": [
+    ["@babel/plugin-proposal-class-properties", { "loose": true }]
   ],
   "env": {
     "test": {
