--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.32.1",
-    "rollup-plugin-uglify": "^6.0.2",
     "typescript": "^4.7.4"
   },
   "dependencies": {
