--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/humps": "^2.0.2",
+    "@types/lodash.merge": "^4.6.7",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "babel-jest": "^28.1.3",
