--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "test:watch": "jest --watch",
     "lint": "eslint --config ./.eslintrc --ignore-path ./.eslintignore src",
     "lint:fix": "yarn lint -- --fix",
+    "check-types": "tsc --noEmit",
     "format": "prettier --write src/**/*.ts",
     "prepublishOnly": "yarn build"
   },
