🔧 upgrade jest config for new version

--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
   ],
   "jest": {
     "verbose": true,
-    "testURL": "http://localhost",
+    "testEnvironmentOptions": {
+      "url": "http://localhost"
+    },
     "automock": false,
     "setupFiles": [
       "./setupJest.js"
