--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-typescript": "^7.18.6",
     "@types/humps": "^2.0.2",
+    "@types/jest": "^28.1.7",
     "@types/lodash.merge": "^4.6.7",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
