🔨 everything is converted to typescript, so we don't need the JS options anymore

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "strict": true,
-    "esModuleInterop": true,
-    "allowJs": true,
-    "checkJs": false
+    "esModuleInterop": true
   },
   "include": ["./src"]
 }
