--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest-fetch-mock": "^3.0.0",
     "prettier": "^2.0.1",
     "pretty-quick": "^3.0.0",
+    "rimraf": "^3.0.2",
     "rollup": "^2.78.1",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-bundle-size": "^1.0.3",
