--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,18 @@
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
     "no-redeclare": "off",
-    "@typescript-eslint/no-redeclare": ["error"]
+    "@typescript-eslint/no-redeclare": ["error"],
+    "no-restricted-imports": [
+      "error",
+      {
+        "paths": [{ "name": "lodash", "message": "Please import from 'lodash/[module]' instead." }],
+        "patterns": [
+          {
+            "group": ["lodash.*"],
+            "message": "Please import from 'lodash/[module]' instead."
+          }
+        ]
+      }
+    ]
   }
 }
