--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "humps": "^2.0.1",
+    "lodash": "^4.17.21",
     "lodash.merge": "^4.6.1",
     "lodash.mergewith": "^4.6.2"
   },
