--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/humps": "^2.0.2",
     "@types/jest": "^28.1.7",
+    "@types/lodash": "^4.17.10",
     "@types/lodash.merge": "^4.6.7",
     "@types/lodash.mergewith": "^4.6.7",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
