--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "@types/humps": "^2.0.2",
     "@types/jest": "^28.1.7",
     "@types/lodash": "^4.17.10",
-    "@types/lodash.merge": "^4.6.7",
-    "@types/lodash.mergewith": "^4.6.7",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "babel-jest": "^28.1.3",
@@ -45,9 +43,7 @@
   },
   "dependencies": {
     "humps": "^2.0.1",
-    "lodash": "^4.17.21",
-    "lodash.merge": "^4.6.1",
-    "lodash.mergewith": "^4.6.2"
+    "lodash": "^4.17.21"
   },
   "scripts": {
     "build": "rimraf dist && rollup -c",
