--- a/.github/workflows/create-tag.yaml
+++ b/.github/workflows/create-tag.yaml
@@ -21,6 +21,7 @@ jobs:
         with:
           application_id: ${{ secrets.GH_APPLICATION_ID }}
           application_private_key: ${{ secrets.GH_APPLICATION_PRIVATE_KEY }}
+          revoke_token: "true"
       - name: Check out code
         uses: actions/checkout@v4
         with:
